fixed system bg issue on mobile

--- a/src/_includes/style/base/_generalstyles.scss
+++ b/src/_includes/style/base/_generalstyles.scss
@@ -29,7 +29,7 @@ mark {
 .system-bg {
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: max(100vw, 100vh);
     background-image: url('../assets/bg/system_bg.svg');
     background-size: 100%;
     background-repeat: no-repeat;
